@@ -79,7 +79,7 @@ PLLIBS= MANUAL helpidx.pl help.pl explain.pl \
 	backcomp.pl gensym.pl listing.pl debug.pl \
 	bim.pl quintus.pl edinburgh.pl ctypes.pl files.pl \
 	edit.pl emacs_interface.pl shell.pl check.pl \
-	tty.pl readln.pl readutil.pl make.pl \
+	tty.pl readln.pl readutil.pl make.pl option.pl \
 	am_match.pl oset.pl ordsets.pl occurs.pl lists.pl \
 	netscape.pl url.pl win_menu.pl \
 	qpforeign.pl \
